+ [interface] Allow to create new table from navigation frame (in light mode).
+ rfe #1025696 [browse] Add direct download of binary fields.
- [browse] Properly display NULL value for BLOB.
- rfe #1516803 [edit] Allow to set BLOB to/from NULL with ProtectBinary.
- [edit] Do not default to UNHEX when using file upload.
- rfe #1379201 [core] Add option to configure session_save_path.

3.3.0.0 (not yet released)
+ rfe #2308632 [edit] Use hex for (var)binary fields,
  thanks to Maarten Dieleman - maartendieleman
+ patch #2794819 [navi] Filter for displayed table names,
  thanks to Michael Valushko - dylfin
- bug #2794840 [core] Cannot redeclare pma_tableheader() 
- rfe #2726479 [core] configurable maximal length of URL
+ patch #2724755 [display] Full/partial text links (big T) are back,
  thanks to nullbarriere - nullbarriere 
- bug [display] handle NavigationBarIconic as documented for navi buttons
+ rfe #2726479 [export] Export tables preselect
+ patch #2805828 [export] PHP array export plugin, 
  thanks to Geoffray Warnants - amnsk
+ patch #2798592 [import] Progress bar, 
  thanks to Tomas Srnka - tomassrnka
- bug [gui] Generate Password not working for 'Change Login Information', only for 'Change password'
+ [lang] Arabic update, thanks to Meno25 - meno25 
+ rfe #2822190 [structure] BOOLEAN is standard SQL 
+ [lang] German update, thanks to knittl
+ [lang] German update, thanks to virsacer
+ rfe #2813867 [structure] Default sorting order in list of tables
+ [import] Added MySQL type-detection functionality to import library,
  thanks to Derek Schaefer
+ [import] Added ODS, Excel XLS, Excel XLSX, and XML import modules,
  thanks to Derek Schaefer
+ [export] Added Excel XLSX export module,
  thanks to Derek Schaefer
+ [core] Added ability for tracking changes made through phpMyAdmin
+ rfe #2839504 [engines] Support InnoDB plugin's new row formats 
+ [core] Added ability for synchronizing databases among servers.
+ [lang] #2843101 Dutch update, thanks to scavenger2008